--- a/Mapping_Single_Points/index.html
+++ b/Mapping_Single_Points/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- The div that holds our map -->
-    <div id="mapid"></div>
+    <div id="mapid" class = "dark"></div>
 
     <!--Leaflet JavaScript-->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
